# crobots_plus_plus

./: .gitattributes  .gitmodules  CMakeLists.txt
crobots++/api/include/crobots++/: crobots++.hpp  internal.hpp  math.hpp  robot.hpp
crobots++/api/src/: crobots++.cpp  math.cpp  robot.cpp
crobots++/engine/: api.cpp  api.hpp  buffer.hpp  camera.cpp  camera.hpp  engine.cpp  engine.hpp  log.cpp  log.hpp  main.cpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  registry.cpp  registry.hpp  renderer.cpp  renderer.hpp  robot.cpp  robot.hpp  shader.cpp  shader.hpp
crobots++/shaders/: cube.vert  instanced.frag  line.vert  shader.hlsl  solid_polygon.frag  solid_polygon.vert  transformed_color.vert
robots/: bumper_car.cpp  engine_failure.cpp  up_down.cpp
